# vehicle_simulation_packages

./: README.md
air_description/: README.md  package.xml  setup.cfg  setup.py
air_description/launch/: air_description.launch.py
air_description/urdf/: sd_twizy.urdf.xacro
air_description/urdf/bases/: sd_twizy_body.gazebo.xacro  sd_twizy_body.urdf.xacro
air_description/urdf/sensors/: VLP-16.urdf.xacro  cameras.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro
air_description/urdf/wheels/: sd_twizy_suspension.urdf.xacro
air_sim/: CMakeLists.txt  package.xml
air_sim/config/: air.rviz  odom.rviz  pcd.rviz
air_sim/launch/: air_simulation.launch.py
air_sim/models/ambulance/: model.sdf
air_sim/models/apartment/: model.sdf
air_sim/models/bus/: model.sdf
air_sim/models/city_terrain/: model.sdf
air_sim/models/fast_food/: model.sdf
air_sim/models/gas_station/: model.sdf
air_sim/models/grey_wall/: model.sdf
air_sim/models/grocery_store/: model.sdf
air_sim/models/house_1/: model.sdf
air_sim/models/house_3/: model.sdf
air_sim/models/lamp_post/: model.sdf
air_sim/models/law_office/: model.sdf
air_sim/models/oak_tree/: model.sdf
air_sim/models/office_building/: model.sdf
air_sim/models/pickup/: model.sdf
air_sim/models/pine_tree/: model.sdf
air_sim/models/playground/: model.sdf
air_sim/models/radio_tower/: model.sdf
air_sim/models/road/: model.config  model.sdf
air_sim/models/salon/: model.sdf
air_sim/models/school/: model.sdf
air_sim/models/stop_light/: model.sdf
air_sim/models/stop_sign/: model.sdf
air_sim/models/suv/: model.sdf
air_sim/models/telephone_pole/: model.sdf
air_sim/scripts/: odom_tf_broadcaster.py
air_sim/worlds/: default.world  roads.world  testing.world  ufg.world  ufg_default.world
bounging_box_plugin/: CMakeLists.txt  package.xml
bounging_box_plugin/src/: bounding_box_plugin.cpp
vehicle_control_plugin/: CMakeLists.txt  package.xml
vehicle_control_plugin/include/vehicle_control/: vehicle_control.hpp
vehicle_control_plugin/scripts/: sd_msgs_to_ackermann.py  sd_teleop_keyboard_control.py  sd_teleop_with_vehicle_interface.py  teleop_keyboard.py
vehicle_control_plugin/src/: vehicle_control.cpp
