<?xml version="1.0"?>
<package format="3">
  <name>air_sim</name>
  <version>2.1.0</version>
  <description>The air_sim package</description>

  <maintainer email="efimia@streetdrone.com">Efimia Panagiotaki</maintainer>
  <maintainer email="fionan@streetdrone.com">Fionán O'Sullivan</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>python3</exec_depend>  <!-- Add Python runtime dependency -->
  <exec_depend>launch_ros</exec_depend>  <!-- If using ROS2 launch files -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
